# GeomAlgo

./: .gitignore  CMakeLists.txt
codes/: Bbox_3.cpp  Bbox_3.h  CMakeLists.txt  Collision.cpp  Collision.h  Edge.cpp  Edge.h  EdgeOrder.cpp  EdgeOrder.h  Geom_Support.cpp  Geom_Support.h  InOut.cpp  InOut.h  LoopEdges.cpp  Macros.h  Mesh.cpp  Mesh.h  Point.cpp  Point.h  Quad.h  Rtree.h  Triangle.cpp  Triangle.h  Vector_3.h  Writedata.cpp  Writedata.h  gTest.cpp  main.cpp  stl_reader.h  test_connectivity.cpp  test_connectivity1.cpp
codes/Algorithms/: AdaptParent.cpp  AdaptParent.h  AdaptiveRefinement_EdgeBased.cpp  AdaptiveRefinement_EdgeBased.h  AdaptivieTriangle.cpp  AdaptivieTriangle.h  AlgorithmInitialize.cpp  AlgorithmInitialize.h  ExtractIntTriangle.cpp  ExtractIntTriangle.h  HoleDetection.cpp  HoleDetection.h  LaplacianSmoothing.cpp  LaplacianSmoothing.h  MidpointSubdivision.cpp  MidpointSubdivision.h  SelectiveRefinement.cpp  SelectiveRefinement_Version2.cpp
codes/Algorithms/Experiments/: ConvexHull_3D.cpp  ConvexHull_3D.h  ReadMe.txt
codes/Algorithms/old/: AdaptiveRefinement_EdgeBased.h  LaplacianSmoothing.h  MidpointSubdivision.h  SelectiveRefinement.h  SelectiveRefinement_Version2.cpp
codes/Data_Structures/HalfEdgeDS/: CMakeLists.txt  Common.h  Edge.h  Face.h  HalfEdge.h  InOut.cpp  Mesh.cpp  Mesh.h  Point.h  Vertex.h  main.cpp
codes/Tet/: CMakeLists.txt  Definition.h  Edge3D.h  Face3D.h  IOtet.cpp  IOtet.h  Mesh3D.cpp  Mesh3D.h  Point3D.cpp  Point3D.h  Polygon3D.cpp  Polygon3D.h
codes/Tet/Generic_Version/: CMakeLists.txt
codes/Tet/Generic_Version/3D/: CMakeLists.txt  Definition.h  Edge3D.h  Element.cpp  Element.h  Face3D.h  Mesh3D.cpp  Mesh3D.h  Point3D.h  Polygons.cpp  Polygons.h  TetIO.cpp  TetIO.h  Tools.h  Vector_3.h  main.cpp
codes/dependencies/Openmesh/lib/: libOpenMeshCore.so.9.0  libOpenMeshTools.so.9.0
codes/old_files/: PlaneClipping.cpp  adaptdesire_version2_1_Send.cpp  adaptive_optimize.cpp  compare.cpp  fixnonmanifold.cpp
codes/old_files/old_experimented/: establishNeigh.cpp  estnadapt.cpp  subdivision_EDbased.cpp
codes/verification/: FluidDomain.cpp  adaptdesire_version2.cpp  adaptdesire_version2_1_Send.cpp  adaptdesire_version2_Send.cpp  adaptdesirededge.cpp  looping.cpp  test_connectivity.cpp
codes/verification/old_experimented/: red_green_try.cpp
